removed addMissingEdges method
Method has been in the code but not doing anything for a while. removed it.

Also working on tests.