@@ -103,12 +103,18 @@
 		
 	<!--  Test scope dependencies  -->
 	<!-- https://mvnrepository.com/artifact/net.praqma/junit-tools -->
+	<dependency>
+    		<groupId>org.powermock</groupId>
+    		<artifactId>powermock-api-mockito2</artifactId>
+    		<version>2.0.9</version>
+    		<scope>test</scope>
+		</dependency>
 		<dependency>
     		<groupId>org.powermock</groupId>
     		<artifactId>powermock-module-junit4</artifactId>
     		<version>2.0.9</version>
     		<scope>test</scope>
-		</dependency>
+		</dependency>	
 		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
 		<dependency>
     		<groupId>org.junit.jupiter</groupId>
@@ -164,6 +170,12 @@
           <version>2.22.1</version>
            <configuration>
                 <skipTests>true</skipTests>
+                <argLine>
+                	--add-opens java.base/java.lang=ALL-UNNAMED
+                    --add-opens java.base/java.time=ALL-UNNAMED
+					--add-opens java.base/java.time.format=ALL-UNNAMED
+                    --add-opens java.base/java.util=ALL-UNNAMED
+				</argLine>
             </configuration>
         </plugin>
         <plugin>
